# deepmax

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  README.md  config.example.toml  docker-compose.yml  pyproject.toml
src/deepmax/: __init__.py  __main__.py  agent.py  config.py  main.py
src/deepmax/channels/: base.py  telegram.py  terminal.py
src/deepmax/core/: identity.py  orchestrator.py
src/deepmax/storage/: db.py
tests/: test_agent_identity.py  test_chunking.py  test_commands.py  test_config.py
