[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepmax"
version = "0.1.0"
description = "Multi-channel personal bot (Terminal + Telegram) with shared conversation state"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.4",
    "langchain[anthropic,openai,google-genai]",
    "langgraph",
    "langgraph-checkpoint-postgres>=3.0",
    "psycopg[binary,pool]>=3.0",
    "aiogram>=3.0,<4.0",
    "prompt-toolkit>=3.0",
    "asyncpg>=0.29",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.hatch.build.targets.wheel]
packages = ["src/deepmax"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
